// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should show cross icon when input value exists 1`] = `
<Search
  placeholder=""
  value=""
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      prefixCls="fishd-input"
      type="text"
      value=""
    >
      <input
        className="fishd-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </Input>
    <span
      className="undefined-action"
    >
      <Icon
        type="search-line"
      >
        <i
          className="fishdicon fishdicon-search-line"
        />
      </Icon>
    </span>
  </div>
</Search>
`;

exports[`Search should show cross icon when input value exists 2`] = `
<Search
  placeholder=""
  value="a"
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      prefixCls="fishd-input"
      type="text"
      value="a"
    >
      <input
        className="fishd-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="a"
      />
    </Input>
    <a
      className="undefined-action"
      href="#"
      onClick={[Function]}
    >
      <Icon
        type="close-circle-fill"
      >
        <i
          className="fishdicon fishdicon-close-circle-fill"
        />
      </Icon>
    </a>
  </div>
</Search>
`;
